--- a/MoneyBox.WebApi/MoneyBox.WebApi.csproj
+++ b/MoneyBox.WebApi/MoneyBox.WebApi.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Controllers\UserInfoController.cs" />
+    <Compile Include="Filters\BusinessExceptionHandler.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
